--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@notionhq/client": "^2.2.15",
+    "@nuxtjs/tailwindcss": "^6.12.1",
     "axios": "^1.7.3",
     "nuxt": "^3.12.4",
     "vue": "latest"
