--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@notionhq/client": "^2.2.15",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "axios": "^1.7.3",
+    "dotenv": "^16.4.5",
     "nuxt": "^3.12.4",
     "vue": "latest"
   },
